--- a/examples/station_berg.tex
+++ b/examples/station_berg.tex
@@ -25,11 +25,11 @@
     \node[left,align=right] at (38,1.3) {to and from\\ Chamstadt};
   }
   {   % tracks
-    \draw[line width=2pt] ( 1.5, 0) -- ++(37,0);
-    \draw[line width=2pt] (15  , 0) -- ++( 1,1) -- ++(10,0) -- ++(1,-1);
-    \draw[line width=1pt] (11  ,-1) -- ++( 2,0) -- ++( 1,1);
-    \draw[line width=1pt] ( 9  , 1) -- ++( 7,0);
-    \draw[line width=1pt] (14  , 1) -- ++( 1,1) -- ++(10,0);
+    \draw[MainTrack] ( 1.5, 0) -- ++(37,0);
+    \draw[MainTrack] (15  , 0) -- ++( 1,1) -- ++(10,0) -- ++(1,-1);
+    \draw[SideTrack] (11  ,-1) -- ++( 2,0) -- ++( 1,1);
+    \draw[SideTrack] ( 9  , 1) -- ++( 7,0);
+    \draw[SideTrack] (14  , 1) -- ++( 1,1) -- ++(10,0);
     % track numbers
     \node[fill=white] at (11.7, 1) {12};
     \node[fill=white] at (11.7,-1) {10};
