--- a/examples/station_berg.tex
+++ b/examples/station_berg.tex
@@ -31,11 +31,11 @@
     \draw[SideTrack] ( 9  , 1) -- ++( 7,0);
     \draw[SideTrack] (14  , 1) -- ++( 1,1) -- ++(10,0);
     % track numbers
-    \node[fill=white] at (11.7, 1) {12};
-    \node[fill=white] at (11.7,-1) {10};
-    \node[fill=white] at (21.0, 2) { 3};
-    \node[fill=white] at (21.0, 1) { 2};
-    \node[fill=white] at (21.0, 0) { 1};
+    \node[fill=background] at (11.7, 1) {12};
+    \node[fill=background] at (11.7,-1) {10};
+    \node[fill=background] at (21.0, 2) { 3};
+    \node[fill=background] at (21.0, 1) { 2};
+    \node[fill=background] at (21.0, 0) { 1};
     % bufferstops
     \pic at ( 9, 1) {bufferstop_backward};
     \pic at (11,-1) {bufferstop_backward};
