renamed side track to secondary track

--- a/examples/station_berg.tex
+++ b/examples/station_berg.tex
@@ -27,9 +27,9 @@
   {   % tracks
     \draw[MainTrack] ( 1.5, 0) -- ++(37,0);
     \draw[MainTrack] (15  , 0) -- ++( 1,1) -- ++(10,0) -- ++(1,-1);
-    \draw[SideTrack] (11  ,-1) -- ++( 2,0) -- ++( 1,1);
-    \draw[SideTrack] ( 9  , 1) -- ++( 7,0);
-    \draw[SideTrack] (14  , 1) -- ++( 1,1) -- ++(10,0);
+    \draw[SecondaryTrack] (11  ,-1) -- ++( 2,0) -- ++( 1,1);
+    \draw[SecondaryTrack] ( 9  , 1) -- ++( 7,0);
+    \draw[SecondaryTrack] (14  , 1) -- ++( 1,1) -- ++(10,0);
     % track numbers
     \node[fill=background] at (11.7, 1) {12};
     \node[fill=background] at (11.7,-1) {10};
