--- a/examples/station_chamstadt.tex
+++ b/examples/station_chamstadt.tex
@@ -31,7 +31,7 @@
     \draw[MainTrack] (14  , 0) -- ++( 1,-1) -- ++(10.5,0) -- ++( 1,1);
     \draw[MainTrack] (27  , 1) -- ++( 1,-1);
     \draw[MainTrack] (29  , 0) -- ++( 5, 5);
-    \draw[SideTrack] ( 9  , 1) -- ++( 7, 0);
+    \draw[SecondaryTrack] ( 9  , 1) -- ++( 7, 0);
     % % track numbers
     \node[fill=background] at (12.5, 1) {11};
     \node[fill=background] at (21.75, 1) { 1};
