--- a/snippets.tex
+++ b/snippets.tex
@@ -50,7 +50,7 @@
     \hline
       \No & track distance (in \si{\metre}) & \symbol{track_distance.tikz}                        & \code{track_distance.tikz}                        & \texttt{topology}       \\
     \hline
-      \No & side track                      & \symbol{side_track.tikz}                            & \code{side_track.tikz}                            & \texttt{topology}       \\
+      \No & secondary track                 & \symbol{secondary_track.tikz}                       & \code{secondary_track.tikz}                       & \texttt{topology}       \\
     \hline
       \No & track number                    & \symbol{track_number.tikz}                          & \code{track_number.tikz}                          & \texttt{topology}       \\
     \hline
