--- a/src/tikzlibrarytrackschematic.topology.code.tex
+++ b/src/tikzlibrarytrackschematic.topology.code.tex
@@ -10,7 +10,7 @@
 \colorlet{foreground}{black}
 
 \tikzset{MainTrack/.style={line width=2pt,foreground}}%
-\tikzset{SideTrack/.style={line width=0.7pt,foreground}}%
+\tikzset{SecondaryTrack/.style={line width=0.7pt,foreground}}%
 
 \tikzset{
   pics/track_number/.default=,
