--- a/symbology.tex
+++ b/symbology.tex
@@ -48,7 +48,7 @@
     \hline
       \No & track distance (in \si{\metre}) & \symbol{track_distance.tikz}                        \\
     \hline
-      \No & side track                      & \symbol{side_track.tikz}                            \\
+      \No & secondary track                 & \symbol{secondary_track.tikz}                       \\
     \hline
       \No & track number                    & \symbol{track_number.tikz}                          \\
     \hline
@@ -122,7 +122,8 @@
     \hline
       \No & transmitter bidirectional       & \symbol{transmitter_below_bidirectional.tikz}       \\
     \hline
-      \No & block end marker                & \symbol{block_end_marker_forward.tikz}              \\
+      \No & \parbox[c]{4cm}{block end marker\\(end of movement authority)}
+                                            & \symbol{block_end_marker_forward.tikz}              \\
     \hline
       \No & block clearing point            & \symbol{block_clearing_point_forward.tikz}          \\
     \hline
