arrange files for CTAN

--- a/doc/snippets.tex
+++ b/doc/snippets.tex
@@ -8,7 +8,7 @@
 \usepackage[margin=0pt]{geometry}
 \pagestyle{empty}
 
-\usepackage{doc}
+\usepackage{tikz-trackschematic-documentation}
 
 \lstset{%
   language         = TeX,%
